* Thu Nov 10 2022 Alin Popa <alin.popa@fxdata.ro> - 1.5.4
- Update to libtaskmonitor v1.0.4
- Add VmSize and MemShared data support

* Thu Nov 3 2022 Alin Popa <alin.popa@fxdata.ro> - 1.5.3
- Update to libtaskmonitor v1.0.2
- Fix errors when building with harden security flags

* Thu Oct 4 2022 Alin Popa <alin.popa@fxdata.ro> - 1.5.2
- Update to libtaskmonitor v1.0.2
- Fix process not re-added to context after restart

* Thu Sep 15 2022 Alin Popa <alin.popa@fxdata.ro> - 1.5.1
- Add IO Wait in CPU Stats

* Fri May 06 2022 Alin Popa <alin.popa@fxdata.ro> - 1.0
- Initial release with distro packages