@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.7.2)
 project(TaskMonitorCollector
         LANGUAGES CXX
-        VERSION 1.5.4
+        VERSION 1.6.0
 )
 
 set(CMAKE_CXX_STANDARD 17)
