@@ -377,9 +377,8 @@ auto Query::createTables(Query::Type type) -> std::string
           << m_procInfoColumn.at(ProcInfoColumn::CtxName) << " TEXT NOT NULL, "
           << m_procInfoColumn.at(ProcInfoColumn::CpuTime) << " INTEGER NOT NULL, "
           << m_procInfoColumn.at(ProcInfoColumn::CpuPercent) << " INTEGER NOT NULL, "
-          << m_procInfoColumn.at(ProcInfoColumn::MemVmSize) << " INTEGER NOT NULL, "
-          << m_procInfoColumn.at(ProcInfoColumn::MemVmRSS) << " INTEGER NOT NULL, "
-          << m_procInfoColumn.at(ProcInfoColumn::MemShared) << " INTEGER NOT NULL, "
+          << m_procInfoColumn.at(ProcInfoColumn::MemRSS) << " INTEGER NOT NULL, "
+          << m_procInfoColumn.at(ProcInfoColumn::MemPSS) << " INTEGER NOT NULL, "
           << m_procInfoColumn.at(ProcInfoColumn::SessionId) << " INTEGER NOT NULL, ";
     } else {
       out << m_procInfoColumn.at(ProcInfoColumn::Id) << " SERIAL PRIMARY KEY, "
@@ -393,9 +392,8 @@ auto Query::createTables(Query::Type type) -> std::string
           << m_procInfoColumn.at(ProcInfoColumn::CtxName) << " TEXT NOT NULL, "
           << m_procInfoColumn.at(ProcInfoColumn::CpuTime) << " BIGINT NOT NULL, "
           << m_procInfoColumn.at(ProcInfoColumn::CpuPercent) << " BIGINT NOT NULL, "
-          << m_procInfoColumn.at(ProcInfoColumn::MemVmSize) << " BIGINT NOT NULL, "
-          << m_procInfoColumn.at(ProcInfoColumn::MemVmRSS) << " BIGINT NOT NULL, "
-          << m_procInfoColumn.at(ProcInfoColumn::MemShared) << " BIGINT NOT NULL, "
+          << m_procInfoColumn.at(ProcInfoColumn::MemRSS) << " BIGINT NOT NULL, "
+          << m_procInfoColumn.at(ProcInfoColumn::MemPSS) << " BIGINT NOT NULL, "
           << m_procInfoColumn.at(ProcInfoColumn::SessionId) << " INTEGER NOT NULL, ";
     }
     out << "CONSTRAINT KFSession FOREIGN KEY(" << m_procInfoColumn.at(ProcInfoColumn::SessionId)
@@ -413,8 +411,8 @@ auto Query::createTables(Query::Type type) -> std::string
           << m_contextInfoColumn.at(ContextInfoColumn::CtxName) << " TEXT NOT NULL, "
           << m_contextInfoColumn.at(ContextInfoColumn::TotalCpuTime) << " INTEGER NOT NULL, "
           << m_contextInfoColumn.at(ContextInfoColumn::TotalCpuPercent) << " INTEGER NOT NULL, "
-          << m_contextInfoColumn.at(ContextInfoColumn::TotalMemVmRSS) << " INTEGER NOT NULL, "
-          << m_contextInfoColumn.at(ContextInfoColumn::TotalMemShared) << " INTEGER NOT NULL, "
+          << m_contextInfoColumn.at(ContextInfoColumn::TotalMemRSS) << " INTEGER NOT NULL, "
+          << m_contextInfoColumn.at(ContextInfoColumn::TotalMemPSS) << " INTEGER NOT NULL, "
           << m_contextInfoColumn.at(ContextInfoColumn::SessionId) << " INTEGER NOT NULL, ";
     } else {
       out << m_contextInfoColumn.at(ContextInfoColumn::Id) << " SERIAL PRIMARY KEY, "
@@ -425,8 +423,8 @@ auto Query::createTables(Query::Type type) -> std::string
           << m_contextInfoColumn.at(ContextInfoColumn::CtxName) << " TEXT NOT NULL, "
           << m_contextInfoColumn.at(ContextInfoColumn::TotalCpuTime) << " BIGINT NOT NULL, "
           << m_contextInfoColumn.at(ContextInfoColumn::TotalCpuPercent) << " BIGINT NOT NULL, "
-          << m_contextInfoColumn.at(ContextInfoColumn::TotalMemVmRSS) << " BIGINT NOT NULL, "
-          << m_contextInfoColumn.at(ContextInfoColumn::TotalMemShared) << " BIGINT NOT NULL, "
+          << m_contextInfoColumn.at(ContextInfoColumn::TotalMemRSS) << " BIGINT NOT NULL, "
+          << m_contextInfoColumn.at(ContextInfoColumn::TotalMemPSS) << " BIGINT NOT NULL, "
           << m_contextInfoColumn.at(ContextInfoColumn::SessionId) << " INTEGER NOT NULL, ";
     }
     out << "CONSTRAINT KFSession FOREIGN KEY("
@@ -1149,16 +1147,14 @@ auto Query::addData(Query::Type type,
           << m_procInfoColumn.at(ProcInfoColumn::CtxName) << ","
           << m_procInfoColumn.at(ProcInfoColumn::CpuTime) << ","
           << m_procInfoColumn.at(ProcInfoColumn::CpuPercent) << ","
-          << m_procInfoColumn.at(ProcInfoColumn::MemVmSize) << ","
-          << m_procInfoColumn.at(ProcInfoColumn::MemVmRSS) << ","
-          << m_procInfoColumn.at(ProcInfoColumn::MemShared) << ","
+          << m_procInfoColumn.at(ProcInfoColumn::MemRSS) << ","
+          << m_procInfoColumn.at(ProcInfoColumn::MemPSS) << ","
           << m_procInfoColumn.at(ProcInfoColumn::SessionId) << ") VALUES ('" << systemTime << "', '"
           << monotonicTime << "', '" << receiveTime << "', '" << procEntry.comm() << "', '"
           << procEntry.pid() << "', '" << procEntry.ppid() << "', '"
           << std::to_string(procEntry.ctx_id()) << "', '" << procEntry.ctx_name() << "', '"
           << procEntry.cpu_time() << "', '" << procEntry.cpu_percent() << "', '"
-          << procEntry.mem_vmsize() << "', '" << procEntry.mem_vmrss() << "', '"
-          << procEntry.mem_shared() << "', ";
+          << procEntry.mem_rss() << "', '" << procEntry.mem_pss() << "', ";
     }
 
     if (type == Query::Type::SQLite3) {
@@ -1194,13 +1190,13 @@ auto Query::addData(Query::Type type,
           << m_contextInfoColumn.at(ContextInfoColumn::CtxName) << ","
           << m_contextInfoColumn.at(ContextInfoColumn::TotalCpuTime) << ","
           << m_contextInfoColumn.at(ContextInfoColumn::TotalCpuPercent) << ","
-          << m_contextInfoColumn.at(ContextInfoColumn::TotalMemVmRSS) << ","
-          << m_contextInfoColumn.at(ContextInfoColumn::TotalMemShared) << ","
+          << m_contextInfoColumn.at(ContextInfoColumn::TotalMemRSS) << ","
+          << m_contextInfoColumn.at(ContextInfoColumn::TotalMemPSS) << ","
           << m_contextInfoColumn.at(ContextInfoColumn::SessionId) << ") VALUES ('" << systemTime
           << "', '" << monotonicTime << "', '" << receiveTime << "', '"
           << std::to_string(ctxEntry.ctx_id()) << "', '" << ctxEntry.ctx_name() << "', '"
           << ctxEntry.total_cpu_time() << "', '" << ctxEntry.total_cpu_percent() << "', '"
-          << ctxEntry.total_mem_vmrss() << "', '" << ctxEntry.total_mem_shared() << "', ";
+          << ctxEntry.total_mem_rss() << "', '" << ctxEntry.total_mem_pss() << "', ";
     }
 
     if (type == Query::Type::SQLite3) {
